Fixed link to pers info

--- a/1/contacts.html
+++ b/1/contacts.html
@@ -27,7 +27,7 @@
         <h2>Additional Information</h2>
         <ul>
             <li><a href="index.html">Main<br></a></li>
-            <li><a href="contacts.html">Contactas</a></li>
+            <li><a href="personal.html">Personal info<br></a></li>
         </ul>
     </footer>
 </body>
